# icurl

./: Cargo.toml  README.md  go.mod  main.go
editor/: editor.go
icurl/: arguments.go  completer.go  editor.go  executor.go  option.go
src/: icurl.rs  lib.rs  main.rs  network.rs
