[package]
name = "icurl"
version = "0.1.0"
authors = ["DuGlaser <duglaser0618@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
syntect = "4.4"
dialoguer = "0.6.2"
